# autonomous-robot

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile.amd64  Dockerfile.armhf  Makefile  README.md  docker-compose-prob3.yml  docker-compose.yml  newsimulation-map.txt  old_dock_comp  pathfinder.conf  recentsimulation-map.txt  simulation-map.txt  stalker.conf  subsumer.conf
detector/: .dockerignore  CMakeLists.txt  Dockerfile.amd64  Dockerfile.armhf  Dockerfile.base.amd64  Dockerfile.base.armhf  docker-compose.yml
detector/data/: cascade_alt.xml
detector/src/: CarFinder.cpp  CarFinder.h  CarFinder.hpp  detector.cpp
src/: accelerationregulator.hpp  autonomous-robot.cpp  configurationvalues.hpp  controller.cpp  controller.h  controller.hpp  finiteStateMachine.hpp  helloworld.cpp  maintainDistance.cpp  maintainDistance.hpp  manualcontroller.cpp  manualcontroller.h  manualcontroller.hpp  path-maker.cpp  path-maker.hpp  pathfinder.cpp  pathfinder.hpp  simplecontroller.cpp  simplecontroller.h  simplecontroller.hpp  stalker.cpp  stalker.hpp  subsumer.cpp  subsumer.hpp
src/behaviours/: augmentedfinitestatemachine.hpp  behaviour-avoid.cpp  behaviour-avoid.hpp  behaviour-follow-robot.cpp  behaviour-follow-robot.hpp  behaviour-followpath.cpp  behaviour-followpath.hpp  behaviour-motivation.cpp  behaviour-motivation.hpp  behaviour-reflex.cpp  behaviour-reflex.hpp
tests/: catch.hpp
